# mcp_agent

./: .env.example  .gitignore  .gitmodules  IMPROVEMENTS_SUMMARY.md  LIGHTHOUSE_SETUP.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PRIORITY_ACTION_PLAN_REVISED.md  README.md  analysis_report.md  app.py  complete_project_analysis_report.md  final_test_urban_hive.py  main.py  mcp_agent.config.yaml  package-lock.json  package.json  requirements-dev.txt  requirements.txt  requriements.txt  run_streamlit.py  simple_test.py  sparkleforge_a2a_wrapper.py  sparkleforge_entry_point.py  test_debug_browser.py  test_mcp_tool_call.py
.gemini/: settings.json
configs/: __init__.py  (+11 more)
local_researcher_project/: README.md  env.example  main.py  mcp_client.py  mcp_config.json  mcp_integration.py  mcp_server.py  mcp_tools.py  pyproject.toml  requirements.txt  researcher_config.py  run.sh  run_orchestrator.py  run_web_app.py  test_simple.py
local_researcher_project/configs/: config.yaml  mcp_config.json  tools_config.json
local_researcher_project/data/: local_researcher.db
local_researcher_project/docs/: ARCHITECTURE.md
local_researcher_project/output/: research_20251103_151255.json  research_20251112_091221.md  research_20251112_091527.md
local_researcher_project/scripts/: test_mcp_connection.py
local_researcher_project/skills/evaluator/: SKILL.md
local_researcher_project/src/agents/: __init__.py  agent_manager.py  autonomous_researcher.py  creativity_agent.py  evaluation_agent.py  open_deep_research_adapter.py  research_agent.py  synthesis_agent.py  task_analyzer.py  task_decomposer.py  task_decomposer_clean.py  task_decomposer_old.py  validation_agent.py
local_researcher_project/src/automation/: browser_manager.py
local_researcher_project/src/cli/: gemini_integration.py  index.js
local_researcher_project/src/core/: agent_orchestrator.py  autonomous_orchestrator.py  autonomous_orchestrator_clean.py  autonomous_orchestrator_old.py  compression.py  config.py  error_handler.py  llm_manager.py  llm_methods.py  mcp_auto_discovery.py  mcp_integration.py  progress_tracker.py  reliability.py  research_orchestrator.py  researcher_config.py  shared_memory.py  streaming_manager.py  task_queue.py
local_researcher_project/src/evaluation/: benchmark_evaluator.py
local_researcher_project/src/execution/: __init__.py  script_executor.py
local_researcher_project/src/generation/: markdown_generator.py  report_generator.py
local_researcher_project/src/monitoring/: system_monitor.py
local_researcher_project/src/research/: workflow_manager.py
local_researcher_project/src/storage/: __init__.py  data_manager.py  hybrid_storage.py  vector_store.py
local_researcher_project/src/utils/: __init__.py  config_manager.py  logger.py  output_manager.py
local_researcher_project/src/verification/: fact_checker.py
local_researcher_project/tests/: test_orchestrator.py  test_production_upgrade.py
(+1198 files in other folders)
